Implementação da rota (Route) venda e do Modelo (Model) venda. Foi realizado alguns ajustes na rota funcionario, que passou a ser colaborador. Teve implementação do arquivo CalcularBonus.js e ajustes no sistema Auth.js, para autenticação na aplicação. Após isso, criou-se os arquivos system.js e login.js, para realizar o sistema de login e complementar ao que já foi desenvolvido.
