# swagger_doc.json
@@ -1,33 +1,19 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
+    "version": "1.0",
     "title": "Gestão de empresa.",
     "description": "API REST para gerenciamento de colaboradores, clientes e servicos."
   },
-  "host": "localhost:3001",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
-  "securityDefinitions": {
-    "Bearer": {
-      "type": "apiKey",
-      "name": "Authorization",
-      "in": "header",
-      "description": "Enter your bearer token in the format **Bearer &lt;token>**"
-    }
-  },
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
   "paths": {
     "/": {
       "get": {
-        "summary": "Listar Serviços",
+        "summary": "Listar Usuários (Apenas Admin)",
         "description": "",
         "parameters": [
           {
@@ -53,10 +39,15 @@
           "403": {
             "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       },
       "post": {
-        "summary": "Incluir Serviço",
+        "summary": "Criar Usuário Comum (Apenas Admin)",
         "description": "",
         "parameters": [
           {
@@ -73,7 +64,10 @@
                 "nome": {
                   "example": "any"
                 },
-                "preco": {
+                "usuario": {
+                  "example": "any"
+                },
+                "senha": {
                   "example": "any"
                 }
               }
@@ -90,12 +84,56 @@
           "403": {
             "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      },
+      "put": {
+        "summary": "Alterar o seu próprio usuário",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
     "/{id}": {
       "get": {
-        "summary": "Buscar Serviço",
+        "summary": "Buscar Usuário (Apenas Admin)",
         "description": "",
         "parameters": [
           {
@@ -120,10 +158,15 @@
           "403": {
             "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       },
       "put": {
-        "summary": "Editar Serviço",
+        "summary": "Alterar qualquer Usuário (Apenas Admin)",
         "description": "",
         "parameters": [
           {
@@ -148,9 +191,17 @@
           "403": {
             "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       },
       "delete": {
+        "tags": [
+          "Servico"
+        ],
         "summary": "Excluir Serviço",
         "description": "",
         "parameters": [
@@ -176,13 +227,60 @@
           "403": {
             "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/admin": {
+      "post": {
+        "summary": "Criar Usuário Administrador (Apenas Admin)",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "any"
+                },
+                "usuario": {
+                  "example": "any"
+                },
+                "senha": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     }
-  },
-  "security": [
-    {
-      "bearerAuth": []
-    }
-  ]
+  }
 }
